# django-atris

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  docker-compose.yml  pyproject.toml  run_precommit.sh  run_tests.sh  runtests.py  setup.py  test_requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: prod.yaml  publish.yaml  test.yaml  tests.yaml
atris/: middleware.py  models.py
atris/management/commands/: populate_initial_history.py
atris/tests/: models.py
atris/tests/tests/: test_model.py
history_logging/: __init__.py  models.py
history_logging/management/commands/: populate_initial_history.py
src/atris/: __init__.py  admin.py  apps.py  middleware.py  models.py
src/atris/migrations/: 0001_initial.py  0002_historicalrecord_history_diff.py  0003_added_indexes.py  0004_archivedhistoricalrecord.py  0005_auto_20160411_0250.py  0006_auto_20160622_0720.py  0007_related_field_history.py  0008_object_id_text.py  0009_auto_20190906_0509.py  0010_alter_archivedhistoricalrecord_additional_data_and_more.py  0011_rename_archivedhistoricalrecord_object_id_history_date_atris_archi_object__ddf5a5_idx_and_more.py
src/atris/models/: __init__.py  abstract_historical_record.py  archived_historical_record.py  exceptions.py  helpers.py  historical_record.py  (+1 more)
tests/: __init__.py  conftest.py  factories.py  models.py  settings_override.py
tests/migrations/: 0001_initial.py  0002_add_fields.py  0003_special_alter_episode_episode_metadata_and_more.py
tests/tests/: test_commands.py  test_model.py  test_models.py
(+24 files in other folders)
