[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-atris"
authors = [{ name = "Bogdan Andrei Pop", email = "bpop2232@gmail.com" }]
description = "Django history logger that keeps track of changes on a global level."
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["django", "database", "history", "logging"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=2.2,<=3.2.18",
]
version = "2.0.1"

[tool.setuptools]
zip-safe = false
include-package-data = true

[project.urls]
Homepage = "https://github.com/pbs/django-atris"
